// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base should works correctly with build 1`] = `
Array [
  Object {
    "attrs": Object {
      "noshim": false,
      "type": "module-shim",
    },
    "children": "mf.register(\\"@xx/v2-container\\", (pathname) => pathname.startsWith('/v2'),()=>mf.load(\\"@xx/v2-container\\"));mf.register(\\"@xx/v3-container\\", (pathname) => pathname.startsWith('/v3'),()=>mf.load(\\"@xx/v3-container\\"));mf.start();",
    "injectTo": "head",
    "tag": "script",
  },
]
`;

exports[`base should works correctly with serve 1`] = `
Array [
  Object {
    "attrs": Object {
      "noshim": true,
      "type": "module",
    },
    "children": "mf.register(\\"@xx/v2-container\\", (pathname) => pathname.startsWith('/v2'),()=>import(\\"/packages/v2/container/src/index.js\\"));mf.register(\\"@xx/v3-container\\", (pathname) => pathname.startsWith('/v3'),()=>import(\\"/packages/v3/container/src/index.ts\\"));mf.start();",
    "injectTo": "head",
    "tag": "script",
  },
]
`;
